--- a/products.html
+++ b/products.html
@@ -45,10 +45,25 @@
                 <div class="price">Up to ₹10,000</div>
                 <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
             </div>
-        </div>
-        <!-- अन्य प्रोडक्ट्स (पिछले कोड से समान, संक्षिप्तता के लिए हटाए गए) -->
-    </main>
-
+        
+            <div class="image-container">
+                <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Philips Air Fryer">
+            </div>
+            <div class="product-content">
+                <div class="title">Sliding Tray</div>
+                <div class="price">Up to ₹1,000</div>
+                <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+            </div>
+            
+            <div class="image-container">
+                <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Philips Air Fryer">
+            </div>
+            <div class="product-content">
+                <div class="title">Vacuum Sealer</div>
+                <div class="price">Up to ₹3,000</div>
+                <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+            </div>
+        </main>
     <footer role="contentinfo">
         <div class="footer-content">
             <div class="footer-column">
