Update meal-prep.html p

--- a/meal-prep.html
+++ b/meal-prep.html
@@ -14,7 +14,7 @@
             <button class="hamburger" aria-label="Toggle menu"><i class="fas fa-bars"></i></button>
             <div class="links">
                 <a href="index.html">Home</a>
-                <a href="index.html#products">Products</a>
+                <a href="products.html">Products</a>
                 <div class="dropdown">
                     <button class="dropbtn">Meal Plans <i class="fas fa-caret-down"></i></button>
                     <div class="dropdown-content">
