--- a/office-meal-plan.html
+++ b/office-meal-plan.html
@@ -14,7 +14,7 @@
             <button class="hamburger" aria-label="Toggle menu"><i class="fas fa-bars"></i></button>
             <div class="links">
                 <a href="index.html">Home</a>
-                <a href="products.html">Products</a>
+                <a href="index.html#products">Products</a>
                 <div class="dropdown">
                     <button class="dropbtn">Meal Plans <i class="fas fa-caret-down"></i></button>
                     <div class="dropdown-content">
@@ -32,6 +32,10 @@
         <h1>Weekly Meal Prep Plan for Office-Goers</h1>
         <p>Balanced, Tasty & Easy – with an Indian & Global Twist!</p>
     </header>
+
+    <div class="search">
+        <input type="text" id="searchInput" placeholder="Search meals..." aria-label="Search meal plans">
+    </div>
 
     <div class="container">
         <div class="card">
@@ -66,8 +70,8 @@
 
         <div class="card">
             <h2><i class="fas fa-calendar-alt"></i> 5-Day Meal Plan</h2>
-            <div class="meal-plan">
-                <div class="meal-day">
+            <div class="meal-plan" id="mealPlan">
+                <div class="meal-day" id="office-monday" data-name="Banana Smoothie + Oats, Quinoa + Stir-fry Veggies, Chapati + Palak Paneer">
                     <h3>Monday</h3>
                     <div class="meal-item">
                         <i class="fas fa-coffee"></i>
@@ -91,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="meal-day">
+                <div class="meal-day" id="office-tuesday" data-name="Boiled Eggs + Toast, Rice + Sambar + Curd, Roti + Veg Kurma">
                     <h3>Tuesday</h3>
                     <div class="meal-item">
                         <i class="fas fa-coffee"></i>
@@ -115,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="meal-day">
+                <div class="meal-day" id="office-wednesday" data-name="Upma + Chai, Chickpea Salad + Buttermilk, Lemon Rice + Pickle">
                     <h3>Wednesday</h3>
                     <div class="meal-item">
                         <i class="fas fa-coffee"></i>
@@ -139,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="meal-day">
+                <div class="meal-day" id="office-thursday" data-name="Bread + Avocado Spread, Veg Burrito Bowl + Curd, Dal Khichdi + Ghee">
                     <h3>Thursday</h3>
                     <div class="meal-item">
                         <i class="fas fa-coffee"></i>
@@ -163,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="meal-day">
+                <div class="meal-day" id="office-friday" data-name="Poha + Sprouts, Jeera Rice + Rajma, Chapati + Bhindi Fry">
                     <h3>Friday</h3>
                     <div class="meal-item">
                         <i class="fas fa-coffee"></i>
@@ -304,6 +308,8 @@
         const navLinks = document.querySelector('.links');
         const dropdown = document.querySelector('.dropdown');
         const dropdownContent = document.querySelector('.dropdown-content');
+        const searchInput = document.getElementById('searchInput');
+        const mealDays = document.querySelectorAll('.meal-day');
 
         hamburger.addEventListener('click', () => {
             navLinks.classList.toggle('active');
@@ -320,6 +326,14 @@
                 dropdownContent.classList.remove('show');
             }
         });
+
+        searchInput.addEventListener('input', () => {
+            const query = searchInput.value.toLowerCase();
+            mealDays.forEach(day => {
+                const name = day.getAttribute('data-name').toLowerCase();
+                day.style.display = name.includes(query) ? 'block' : 'none';
+            });
+        });
     </script>
 </body>
-                        </html>
+</html>
